Add basic HTML structure for DigiSavoir

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>DigiSavoir</title>
+</head>
+<body>
+  <h1>✅ DigiSavoir fonctionne</h1>
+  <p>GitHub Pages est correctement configuré.</p>
+</body>
+</html>
 
