Enhance index.html with new sections and title
Added header, hero section, features, and footer to index.html.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,54 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>DigiSavoir</title>
+  <title>DigiSavoir - Accueil</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>✅ DigiSavoir fonctionne</h1>
-  <p>GitHub Pages est correctement configuré.</p>
+
+  <!-- HEADER -->
+  <header class="header">
+    <h1>DigiSavoir</h1>
+    <p class="slogan">Apprendre plus simplement 🌞</p>
+  </header>
+
+  <!-- BIENVENUE -->
+  <section class="hero">
+    <h2>Bienvenue sur DigiSavoir</h2>
+    <p>
+      Plateforme éducative dédiée aux mathématiques, à la physique-chimie  
+      et aux énergies renouvelables, accessible à tous.
+    </p>
+  </section>
+
+  <!-- BLOCS HORIZONTAUX -->
+  <section class="features">
+
+    <div class="card">
+      <h3>📘 Cours</h3>
+      <p>Des cours clairs et adaptés aux collégiens et lycéens.</p>
+      <a href="cours.html">Découvrir</a>
+    </div>
+
+    <div class="card">
+      <h3>✏️ Exercices</h3>
+      <p>S’exercer avec des exercices corrigés pas à pas.</p>
+      <a href="exercices.html">S’entraîner</a>
+    </div>
+
+    <div class="card">
+      <h3>📰 Blog</h3>
+      <p>Articles éducatifs sur le solaire et l’apprentissage.</p>
+      <a href="blog.html">Lire</a>
+    </div>
+
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 DigiSavoir — Inspirer, apprendre, innover 🌞</p>
+  </footer>
+
 </body>
 </html>
-
