Update article link in blog.html

--- a/blog.html
+++ b/blog.html
@@ -178,7 +178,7 @@
         Le rôle stratégique des énergies renouvelables dans le
         développement et l’éducation.
       </p>
-      <a href="#">Lire l’article</a>
+      <a href="article-solaire-debutants.html">Lire l’article</a>
     </div>
 
   </section>
